bug 602534 - simpler scheduling of the last ditch GC. r=anygregor